  16 Mar 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +files/nml-9999-setup.py-add-missing-packages.patch, nml-9999.ebuild:
  games-util/nml: updated nightly for opengfx-0.5.2  nml-0.4.0 release is
  missing the same deps string, but the tarball is also missing the required
  files, making it unusable until fixed upstream

*nml-9999 (30 Aug 2013)

  30 Aug 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +metadata.xml, +nml-9999.ebuild:
  games-util/nml-9999 new ebuild