@@ -1,0 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST nml-0.4.1.tar.gz 377419 SHA256 f53c06a209655407a8e9604f15bb30f137c20b3754ceb9449b4904a1956d0ae0 SHA512 3ac1b3c716b62975261fc55d5a70eba1616d65a4e68e0520da63d6be4a85646dce7fc5f17b9ae896eb8e232d756f9604b9dbc020a76020f5cd73b0419e11f006 WHIRLPOOL c122ad3301f9f5e4f4cba85c776675e66984b82123db81a97d79d3e266231afebc611d8203f9a532a23b9c485595031aa9c1b1e6f3987d67118d85b4cce49cf0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQJ8BAEBCABmBQJVMLV8XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
+RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB598kEQAILNy5I2HBmBPkdup5Cvfj0Q
+m9FpwEnl6kyijovsMYrfZ6EVUKowFhdLNSIdlGukAYBD0blbu/2ltSvB2TP9sY5/
+U2OW4VpptYHf9hoz1httLa9GUYrDigaIDRbr3+1OEKwSttWUKMhQPtE3M9jsbDHa
+nyn8RDFW5OF0RtTvWA46/dTA56CSjycTjhW40xHpI+UGWwlXGA8zMw9xnjLzXAyi
+zcee/bq5M2xYF68WQk8qBpg9IUdYldC4VAWBnF/VjlHM6FZT5FoAafeCG2h69qGM
+4Ye0vkq0V2xWChdrpSk6MMnKgpM/EhTRqBSfso6ttmpuC4vaayULPHp1dyoyJWGl
+Fy6M/I9RRNnL+tyFvgwP2/WkQKW5dvqp8kFIieqpqzauD0DANGok+ey0lki5FDHl
+4OEjoO2rmru38vsRirKn9UdpjAK2l9jHTR5LYkDX2ysINYSbJ1x2WQiqYUqRK+Kt
+z8RBaWECaF3Q9Ziqf9EcdtXGZRCOt7cyDJ9QdPZowkkX4XCrrvbTPqvrtJZwnLK2
+IPP3XiR55nZI+mcrfkh4f9uSCgRN5BqysIfTj08bV9OVgayolSpfnS+4DBDJp2py
+PiADbCM4OZ3dSTChAT/kXo9cba+R+RpCZ434WJ9jESqViXJId/ijVtKhYlF0UmQA
+KxuvC17IZfRQw9tWyXYG
+=bbHS
+-----END PGP SIGNATURE-----
